<TableLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    tools:context=".AgregarClientesActivity" >    
    
    <TextView
        android:id="@+id/lblAgregarCliente"
        android:layout_width="150dp"
        android:layout_height="wrap_content"
        android:layout_gravity="center_horizontal"
        android:text="@string/lblAgregarCliente" />
    
    <Space android:layout_height="50dp" />

    <TableRow>
    	<TextView
        	android:id="@+id/lblNombCliente"
        	android:layout_width="wrap_content"
        	android:layout_height="wrap_content"
        	android:text="@string/lblNombCliente" />

   	 	<EditText
        	android:id="@+id/txtNombre"
        	android:layout_width="200dp"
        	android:layout_height="wrap_content"
        	android:ems="10" />
    
    </TableRow>
    
  <Space android:layout_height="10dp" />
    
    
    <TableRow>

        <TextView
            android:id="@+id/lblTelefono"
            android:layout_width="150dp"
            android:layout_height="wrap_content"
            android:text="@string/lblTel" />

        <EditText
            android:id="@+id/txtTelefono"
            android:layout_width="200dp"
            android:layout_height="wrap_content"
            android:ems="10" >

            <requestFocus />
        </EditText>
    </TableRow>

    <TableRow>
    <TextView
        android:id="@+id/lblProductos"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="38dp"
        android:text="@string/lblProductos" />
    </TableRow>
    
    <TableRow >

    <Spinner
        android:id="@+id/spnProductos"
        android:layout_width="200dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="19dp" />

    </TableRow>
    
    <TableRow >
    <TextView
        android:id="@+id/lblDireccion"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="19dp"
        android:text="@string/lblDireccion" />
    
    </TableRow>

    <TableRow >
        
    <ImageButton
        android:id="@+id/btnAdd"
        android:layout_width="90dp"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:background="#228B22"
        android:contentDescription="@string/btnAccept"
        android:src="@drawable/save24px" />

    </TableRow>
    
</TableLayout>
