<TableLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    tools:context=".ProductosActivity" >
    
    <Space android:layout_height="25dp" />

    <TableRow
        android:layout_width="match_parent"
        android:layout_height="match_parent" 
        android:padding="5dip">

        <TextView
            android:id="@+id/lblCode"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center_vertical"
            android:layout_marginLeft="10dp"
            android:text="@string/lblCode" />

        <EditText
            android:id="@+id/txtCode"
            android:layout_width="154dp"
            android:layout_height="wrap_content"
            android:layout_marginLeft="10dp"
            android:ems="10" >

            <requestFocus />
        </EditText>
    </TableRow>

    <Space android:layout_height="20dp" />

    <TableRow
        android:layout_width="match_parent"
        android:layout_height="match_parent" 
        android:padding="5dip">

        <TextView
            android:id="@+id/lblNameProduct"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center_vertical"
            android:layout_marginLeft="10dp"
            android:text="@string/lblName" />

        <EditText
            android:id="@+id/txtNameProduct"
            android:layout_width="154dp"
            android:layout_height="wrap_content"
            android:layout_marginLeft="10dp"
            android:ems="10" >

            <requestFocus />
        </EditText>
    </TableRow>

    <Space android:layout_height="20dp" />

    <TableRow
        android:layout_width="match_parent"
        android:layout_height="match_parent" 
        android:padding="5dip">

        <TextView
            android:id="@+id/lblCost"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center_vertical"
            android:layout_marginLeft="10dp"
            android:text="@string/lblPrice" />

        <EditText
            android:id="@+id/txtCost"
            android:layout_width="154dp"
            android:layout_height="wrap_content"
            android:layout_marginLeft="10dp"
            android:ems="10" >

            <requestFocus />
        </EditText>
    </TableRow>

    <Space android:layout_height="20dp" />

    <TableRow
        android:layout_width="match_parent"
        android:layout_height="match_parent" 
        android:padding="5dip">

        <TextView
            android:id="@+id/lblDescriptionProduct"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center_vertical"
            android:layout_marginLeft="10dp"
            android:text="@string/lblDescription" />

        <EditText
            android:id="@+id/txtDescriptionProduct"
            android:layout_width="154dp"
            android:layout_height="wrap_content"
            android:layout_marginLeft="10dp"
            android:ems="10" >

            <requestFocus />
        </EditText>
    </TableRow>

    <Space android:layout_height="20dp" />
    
    <TableRow
        android:id="@+id/tableRow1"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content">

        <Button
            android:id="@+id/btnSaveProduct"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:paddingLeft="10dp"
            android:text="@string/btnAccept" />

        <Button
            android:id="@+id/btnCancelProduct"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="right"
            android:paddingRight="10dp"
            android:text="@string/btnCancel" />

    </TableRow>

 

</TableLayout>
