<TableLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    tools:context=".AgregarCobroActivity" >

    <Space android:layout_height="25dp" />

    <TableRow
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:padding="1dip" >

        <TextView
            android:id="@+id/lblAddOrder"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginLeft="2dp"
            android:fontFamily="roboto-light"
            android:text="@string/lblProductos"
            android:textColor="#8A0886"
            android:textSize="16sp" />

        <MultiAutoCompleteTextView
            android:id="@+id/txtAddOrden"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:ems="10"
            android:text="" >

            <requestFocus />
        </MultiAutoCompleteTextView>
    </TableRow>

    <Space android:layout_height="20dp" />

    <TableRow
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:padding="1dip" >

        <TextView
            android:id="@+id/lblAddOrderClient"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginLeft="2dp"
            android:fontFamily="roboto-light"
            android:text="@string/lblCliente"
            android:textColor="#8A0886"
            android:textSize="16sp" />

        <MultiAutoCompleteTextView
            android:id="@+id/txtAddOrdenClient"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:ems="10"
            android:text="" >

            <requestFocus />
        </MultiAutoCompleteTextView>
    </TableRow>

    <Space android:layout_height="20dp" />

    <TableRow
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:padding="1dip" >

        <TextView
            android:id="@+id/lblAddOrderFechaCobro"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginLeft="2dp"
            android:fontFamily="roboto-light"
            android:text="@string/lblFechaCobro"
            android:textColor="#8A0886"
            android:textSize="16sp" />

        <Spinner
            android:id="@+id/spnFechaCobro"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content" />
    </TableRow>

    <Space android:layout_height="20dp" />

    <TableRow
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:padding="1dip" >

        <TextView
            android:id="@+id/lblAddOrderTotal"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginLeft="2dp"
            android:fontFamily="roboto-light"
            android:text="@string/lblTotal"
            android:textColor="#8A0886"
            android:textSize="16sp" />

        <EditText
            android:id="@+id/txtAddOrdenTotal"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:ems="10"
            android:inputType="number"
            android:text="" >

            <requestFocus />
        </EditText>
    </TableRow>

    <Space android:layout_height="20dp" />

    <TableRow
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:padding="1dip" >

        <TextView
            android:id="@+id/lblAddOrderVendedor"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginLeft="2dp"
            android:fontFamily="roboto-light"
            android:text="@string/lblVendedor"
            android:textColor="#8A0886"
            android:textSize="16sp" />

        <Spinner
            android:id="@+id/spnAddOrderVendedor"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content" />
    </TableRow>

    <TableRow
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:padding="1dip" >

        <Button
            android:id="@+id/btnSaveCobro"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:background="#FFFFFF"
            android:drawableLeft="@drawable/check32px"
            android:fontFamily="roboto-light"
            android:paddingLeft="10dp"
            android:text="@string/btnAccept"
            android:textColor="#91A5AE"
            android:textSize="16sp" />

        <Button
            android:id="@+id/btnCancelCobro"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="left"
            android:background="#FFFFFF"
            android:drawableLeft="@drawable/cancel32px"
            android:fontFamily="roboto-light"
            android:paddingLeft="20dp"
            android:text="@string/btnCancel"
            android:textColor="#91A5AE"
            android:textSize="16sp" />
    </TableRow>

</TableLayout>
